Move Poll action under auth (#14)
Move Poll action under auth
Added tests for poll
openapi spec Changes
Added sending email
