# app/Models/Poll.php
@@ -9,6 +9,12 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Poll extends Model
 {
+    public const STATUS_DRAFT = 'draft';
+    public const STATUS_PUBLISHED = 'published';
+    public const STATUS_ACTIVE = 'active';
+    public const STATUS_FINISHED = 'finished';
+    public const STATUS_CLOSED = 'closed';
+
     use HasFactory;
 
     /**
@@ -37,8 +43,22 @@ class Poll extends Model
         'started_at' => 'datetime',
         'ended_at' => 'datetime',
         'published_at' => 'datetime',
-//        'emailsList' => EmailsList::class,
     ];
+
+    public function status(): string
+    {
+        if ($this->published_at !== null) {
+            if ($this->started_at <= new \DateTime() && $this->ended_at >= new \DateTime()) {
+                return self::STATUS_ACTIVE;
+            }
+
+            if ($this->ended_at <= new \DateTime()) {
+                return self::STATUS_FINISHED;
+            }
+        }
+
+        return self::STATUS_DRAFT;
+    }
 
     public function creator(): BelongsTo
     {
